# ha-midea-dishwasher

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  lint.yml
config/: configuration.yaml
custom_components/integration_blueprint/: manifest.json
custom_components/midea_dishwasher/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  manifest.json  number.py  options_flow.py  repairs.py  services.py  services.yaml  switch.py
custom_components/midea_dishwasher/binary_sensor/: __init__.py  door_binary_sensor.py  extra_drying_binary_sensor.py  rinse_aid_binary_sensor.py
custom_components/midea_dishwasher/button/: __init__.py  cancel_button.py  start_eco_button.py  start_intensive_button.py
custom_components/midea_dishwasher/exceptions/: __init__.py  api_client_authentication_error.py  api_client_communication_error.py  api_client_error.py
custom_components/midea_dishwasher/sensor/: __init__.py  error_sensor.py  mode_sensor.py  progress_sensor.py  status_sensor.py  time_remaining_sensor.py
custom_components/midea_dishwasher/translations/: en.json  pt-BR.json
scripts/: develop  lint
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_number.py  test_options_flow.py  test_repairs.py  test_sensor.py  test_switch.py  test_translations.py
